# snowflake_client

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/snowflake_client/: __init__.py  client.py
tests/: test_client.py
